completed task features
